--- a/TrackingList/TrackingList/TrackingList/App.xaml
+++ b/TrackingList/TrackingList/TrackingList/App.xaml
@@ -3,6 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TrackingList.App">
 	<Application.Resources>
-    
-	</Application.Resources>
+        <ResourceDictionary>
+
+            <!-- Styles_NavigationBar -->
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="#843284"/>
+                <Setter Property="BarTextColor" Value="White"/>
+            </Style>
+            <!-- Styles_NavigationBar -->
+
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
