Versao ajustes layout necessarios

--- a/TrackingList/TrackingList/TrackingList/View/HomeList.xaml
+++ b/TrackingList/TrackingList/TrackingList/View/HomeList.xaml
@@ -10,9 +10,10 @@
     <ContentPage.BindingContext>
         <viewModel:TrackerViewModel/>
     </ContentPage.BindingContext>
-    
+
     <StackLayout Orientation="Vertical">
         <Label Text="Lista de Rastreadores Homologados"
+             Margin="0,20,0,10"
              VerticalOptions="Start"
              HorizontalTextAlignment="Center"
              VerticalTextAlignment="Center"
