--- a/TrackingList/TrackingList/TrackingList/View/CardsContentView.xaml
+++ b/TrackingList/TrackingList/TrackingList/View/CardsContentView.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:controls1="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-             x:Class="TrackingList.View.CardsContentView">
+             x:Class="TrackingList.View.CardsContentView"
+             xmlns:local="clr-namespace:TrackingList"
+             xmlns:controls1="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin">
 
 
     <Frame IsClippedToBounds="True" HasShadow="True" BackgroundColor="White" >
